--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="contact.css" media="screen">
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 
 <body>
@@ -18,9 +18,10 @@
             </div>
         <div class="header-Right">
             <a href="homepage.html">Home</a>
+            <a href="overview.html">Overview</a>
             <a href="about.html">About</a>
-            <a class="active" href="contact.html">Contact us</a>
-            <a href="services.html">Services</a>
+            <a class="active" href="contact.html">Contact</a>
+           
         </div>
     </div>
 
@@ -34,8 +35,8 @@
     <div class="info-container">
         <h3>Get in Touch</h3>
         <p>If you have any questions or need assistance, feel free to reach out to us!</p>
-        <p>You can contact us via email at <a href="info@example.com">info@example.com</a> or call us at (123) 456-7890.</p>
-        <p>We'd love to hear from you!</p>
+        <p>You can contact me via email at <a href="info@example.com">info@example.com</a> or call us at (123) 456-7890.</p>
+        <p>I'd love to hear from you!</p>
     </div>
 
     <script>
