Added another changes

--- a/contact.html
+++ b/contact.html
@@ -11,31 +11,29 @@
 
 <body>
     <header>
-        
+
         <div class="header">
             <div class="header-Left">
-                <a class="logo">KC</a>
+                <div class="dropdown">
+                    <a class="logo">KC</a>
+                </div>
             </div>
+
         <div class="header-Right">
             <a href="homepage.html">Home</a>
             <a href="overview.html">Overview</a>
             <a href="about.html">About</a>
             <a class="active" href="contact.html">Contact</a>
-           
+            <a href="index.html">Logout</a>
         </div>
     </div>
 
     </header>
 
-    <div class="home-container">
-        <h2>Hello there! Welcome!</h2>
-        <p>This page is all about pictures!</p>
-    </div>
-
     <div class="info-container">
         <h3>Get in Touch</h3>
-        <p>If you have any questions or need assistance, feel free to reach out to us!</p>
-        <p>You can contact me via email at <a href="info@example.com">info@example.com</a> or call us at (123) 456-7890.</p>
+        <p>If you have any questions or need assistance, feel free to reach out to me!</p>
+        <p>You can contact me via email at <a href="info@example.com">coming.katelyn08@gmail.com</a> or call at (123) 456-7890.</p>
         <p>I'd love to hear from you!</p>
     </div>
 
